<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/iv_weather"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_clound"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="℃"
            android:textColor="@android:color/white"
            android:textSize="80sp" />
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:text="@string/info"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:text="@string/update"
        android:layout_margin="5dp"/>
    <ImageButton
        android:id="@+id/update_bt"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@drawable/ic_refresh"
        android:layout_gravity="center"/>
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">
        <TextView
            android:id="@+id/wet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wet"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/feel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feel"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"/>
</LinearLayout>
</LinearLayout>

</LinearLayout>