<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!--作为Toolbar之上的布局，不能单独存在，只能作为AppbarLayout的子布局。
        app:layout_scrollFlags指定为scroll表示标题栏随着内容一起滚动；
        exitUntilCollapsed表示当完全折叠后保留在界面顶部，不移出界面-->
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">

                <RelativeLayout
                    android:id="@+id/showlayout"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp">

                </RelativeLayout>

                <TextView
                    android:id="@+id/time1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="30dp"
                    android:text="显示时间"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                android:title="@string/app_name">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:layout_gravity="center">
            </LinearLayout>
            <TextView
                android:id="@+id/forcast"
                android:textColor="@android:color/white"
                android:text="@string/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/today"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/tomorrow"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/aftertomorrow"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/forcast_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_gravity="center">
                </LinearLayout>
                <TextView
                    android:id="@+id/air"
                    android:textColor="@android:color/white"
                    android:text="@string/air"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <include
                    android:id="@+id/quentity"
                    layout="@layout/air"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
    <LinearLayout
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8sp"
            android:text="@string/copyright"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>